<resources>
    <string name="app_name">News Paper</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Cài Đặt</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- English -->
    <string name="text_email">Thinhdvph04954@fpt.edu.vn</string>
    <string name="app_version">Version 1.00</string>
    <string name="main_menu">Main menu</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="font_size">Font Size</string>
    <string name="font_small">small</string>
    <string name="font_normal">Normal</string>
    <string name="font_big">Big</string>
    <string name="night_shift">Night Shift</string>
    <string name="language">Language</string>
    <string name="news_main">Main</string>
    <string name="gamek_ict">ICT News</string>
    <string name="check_network">This app requires an internet connection, please connect to a network!</string>
    <string name="exit_text"><font color='#40C4FF'>Are you sure you want to exit this app???</font></string>
</resources>