<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:textColor="@color/colorText"
            android:id="@+id/nav_mainMenu"
            android:checked="true"
            android:icon="@drawable/sidemenu_main_menu"
            android:title="@string/main_menu" />
        <item
            android:textColor="@color/colorText"
            android:id="@+id/nav_settings"
            android:icon="@drawable/sidemenu_settings"
            android:title="@string/settings" />
        <item
            android:textColor="@color/colorText"
            android:id="@+id/nav_about"
            android:icon="@drawable/sidemenu_about"
            android:title="@string/about" />
        <item
            android:textColor="@color/colorText"
            android:id="@+id/nav_exit"
            android:icon="@drawable/sidemenu_exit"
            android:title="@string/exit" />
    </group>

</menu>
