<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/colorBackgroud"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    tools:context="com.duan2.thinh.newspaper.ui.fragment.SettingsFragment">

    <TextView
        android:layout_marginTop="10dp"
        android:text="@string/font_size"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:textColor="@color/colorText"
        android:layout_marginTop="15dp"
        android:id="@+id/settings_fontSize"
        android:text="@string/font_small"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <SeekBar
        android:layout_marginTop="15dp"
        android:background="@color/colorText"
        android:id="@+id/settings_seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Switch
            android:id="@+id/nighShift"
            android:background="@color/colorText"
            android:layout_marginRight="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:textColor="@color/colorText"
            android:text="@string/night_shift"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>
